--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-Django==1.5.4
-distribute==0.6.49
+Django==1.5.2
+distribute==0.6.35
+django-google-maps==0.2.2
+mock==1.0.1
 stevedore==0.12
 virtualenv==1.9.1
-virtualenvwrapper==4.0
+virtualenv-clone==0.2.4
+virtualenvwrapper==4.1.1
 wsgiref==0.1.2
