--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
 Django==1.5.2
 distribute==0.6.35
+dj-database-url==0.2.2
+dj-static==0.0.5
 django-google-maps==0.2.2
+easy-thumbnails==1.4
+heroku==0.1.4
 mock==1.0.1
+python-dateutil==1.5
+requests==2.0.1
+six==1.4.1
+static==0.4
 stevedore==0.12
 virtualenv==1.9.1
 virtualenv-clone==0.2.4
