--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ dj-database-url==0.2.2
 dj-static==0.0.5
 django-google-maps==0.2.2
 easy-thumbnails==1.4
+gunicorn==18.0
 heroku==0.1.4
 mock==1.0.1
 python-dateutil==1.5
