--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Django==1.5.2
+South==0.8.3
 distribute==0.6.35
 dj-database-url==0.2.2
 dj-static==0.0.5
@@ -7,6 +8,7 @@ easy-thumbnails==1.4
 gunicorn==18.0
 heroku==0.1.4
 mock==1.0.1
+psycopg2==2.5.1
 python-dateutil==1.5
 requests==2.0.1
 six==1.4.1
