--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ distribute==0.6.35
 dj-database-url==0.2.2
 dj-static==0.0.5
 django-google-maps==0.2.2
+django-reset==0.2.0
+django-toolbelt==0.0.1
 easy-thumbnails==1.4
 gunicorn==18.0
 heroku==0.1.4
