--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,40 @@
 Django==1.5.2
+Pillow==2.2.1
+PyYAML==3.10
+Pygments==1.6
 South==0.8.3
-distribute==0.6.35
+Whoosh==2.5.4
+bpython==0.12
+clang==3.3-svn191928
+distribute==0.6.49
 dj-database-url==0.2.2
 dj-static==0.0.5
+django-auth-ldap==1.1.4
 django-google-maps==0.2.2
+django-haystack==2.1.0
+django-ldap-sync==0.1.0
 django-reset==0.2.0
+django-suit==0.2.5
+django-tables2==0.14.0
 django-toolbelt==0.0.1
+django-user-agents==0.2.2
+djangorestframework==2.3.8
+docutils==0.11
 easy-thumbnails==1.4
 gunicorn==18.0
 heroku==0.1.4
 mock==1.0.1
 psycopg2==2.5.1
 python-dateutil==1.5
+python-ldap==2.4.13
 requests==2.0.1
 six==1.4.1
 static==0.4
 stevedore==0.12
+suit==2.0.2
+ua-parser==0.3.4
+user-agents==0.2.0
 virtualenv==1.9.1
 virtualenv-clone==0.2.4
-virtualenvwrapper==4.1.1
+virtualenvwrapper==4.0
 wsgiref==0.1.2
