--- a/requirements.txt
+++ b/requirements.txt
@@ -28,5 +28,7 @@ stevedore==0.12
 suit==2.0.2
 ua-parser==0.3.4
 user-agents==0.2.0
-
+virtualenv==1.9.1
+virtualenv-clone==0.2.4
+virtualenvwrapper==4.1.1
 wsgiref==0.1.2
