--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-<<<<<<< HEAD
+config.py
+
 # Compiled source #
 ###################
 *.com
@@ -38,7 +39,6 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
-=======
 *.py[cod]
 
 # C extensions
@@ -74,4 +74,3 @@ nosetests.xml
 .mr.developer.cfg
 .project
 .pydevproject
->>>>>>> fb61a3114b89a7f1427d475249cd55121f08b890
