--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==1.5.2
 Pillow==2.2.1
 Pygments==1.6
 South==0.8.3
+Unidecode==0.04.14
 bpython==0.12
 clang==3.3-svn191928
 distribute==0.6.35
@@ -9,6 +10,7 @@ dj-database-url==0.2.2
 dj-static==0.0.5
 django-google-maps==0.2.2
 django-reset==0.2.0
+django-socialregistration==0.5.10
 django-suit==0.2.5
 django-tables2==0.14.0
 django-toolbelt==0.0.1
@@ -16,12 +18,20 @@ django-user-agents==0.2.2
 djangorestframework==2.3.8
 docutils==0.11
 easy-thumbnails==1.4
+-e git+https://github.com/pythonforfacebook/facebook-sdk@e30370fa71a73129979cdd838307a37812d94d1b#egg=facebook_sdk-master
 gunicorn==18.0
 heroku==0.1.4
+httplib2==0.9
 mock==1.0.1
+oauth2==1.5.211
+oauthlib==0.6.1
 psycopg2==2.5.1
 python-dateutil==1.5
+python-oauth2==0.6.0
+python-openid==2.2.5
+python-social-auth==0.1.23
 requests==2.0.1
+requests-oauthlib==0.4.0
 six==1.4.1
 static==0.4
 stevedore==0.12
